objects/kugo2p__Payment_Method__c.object
<CustomObject>
    <description>Kugamon - Main object that stores Debit/Credit Card and Bank Account details.</description>
    <fields>
        <fullName>kugo2p__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_First_Name__c</fullName>
        <label>Billing First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Last_Name__c</fullName>
        <label>Billing Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Salutation__c</fullName>
        <label>Billing Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_State__c</fullName>
        <label>Billing State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__Card_Number__c</fullName>
        <label>Encrypted Credit Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Card_Type__c</fullName>
        <inlineHelpText>Credit Card Type</inlineHelpText>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__Customer_Profile_Id__c</fullName>
        <label>Customer Profile ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is the contact&apos;s default or preferred payment method.</description>
        <inlineHelpText>Indicates this is the contact&apos;s default or preferred payment method.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Expiration_Month__c</fullName>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Expiration_Year__c</fullName>
        <label>Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__IsActive__c</fullName>
        <formula>IF(OR( AND(TEXT(kugo2p__Type__c) == &apos;Paypal&apos;, ISBLANK(kugo2p__Expiration_Year__c), ISPICKVAL(kugo2p__Expiration_Month__c, &apos;&apos;)), CONTAINS(Name, &apos;Bank Account&apos;)), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;),

IF(  
OR(VALUE(kugo2p__Expiration_Year__c)  &lt; YEAR(TODAY()), ISBLANK(kugo2p__Expiration_Year__c)
, ISPICKVAL(kugo2p__Expiration_Month__c, &apos;&apos;) , ISPICKVAL( kugo2p__Card_Type__c , &apos;&apos;) 
), IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;),  

IF( AND( VALUE(TEXT(kugo2p__Expiration_Month__c))  &lt; MONTH( TODAY() ), VALUE ( kugo2p__Expiration_Year__c )   = YEAR( TODAY() )) , IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;), 

IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;))))</formula>
        <inlineHelpText>Green = Active
Red = Not Active</inlineHelpText>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Last_4_Digits__c</fullName>
        <description>Last 4 digits of credit card.</description>
        <inlineHelpText>Last 4 digits of credit card.</inlineHelpText>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Processor_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Payment processor this profile is associated with.</inlineHelpText>
        <label>Processor Connection</label>
        <referenceTo>kugo2p__Processor_Connection__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Profile_Id__c</fullName>
        <description>Record identifier used by the payment processor to reference this payment method.</description>
        <inlineHelpText>Record identifier used by the payment processor to reference this payment method.</inlineHelpText>
        <label>Profile ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>eWay</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Method</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <recordTypes>
        <fullName>kugo2p__AuthNet_CIM_Payment_Profile</fullName>
        <active>true</active>
        <description>Authorize.Net CIM Payment Profile</description>
        <label>Authorize.Net</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__Credit_Card</fullName>
        <active>true</active>
        <description>Salesforce.com Encrypted Credit card details</description>
        <label>Salesforce.com</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__PayPal_Transaction_Reference</fullName>
        <active>true</active>
        <description>A reference to a prior PayPal DirectPayment transaction for use in posting DoReferenceTransaction requests to PayPal</description>
        <label>PayPal</label>
    </recordTypes>
    <recordTypes>
        <fullName>kugo2p__eWay_Customer_Profile</fullName>
        <active>true</active>
        <description>eWay managed customer profile for tokenized card storage and retrieval.</description>
        <label>eWay</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>